--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/bank
+spring.datasource.url=jdbc:mysql://localhost:3306/bankapplication
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto = update
