--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,7 @@ jobs:
           distribution: 'zulu'
           java-version: '17'
       - uses: s4u/maven-settings-action@v2.8.0
-      - run: mvn verify
+      - run: mvn clean install
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
